--- a/views/vehicles/edit.ejs
+++ b/views/vehicles/edit.ejs
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Edit Vehicle</title>
-</head>
-<body>
-	<h1>Edit Vehicle</h1>
-	<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST">
-		<div>
-			<label for="name">Name</label>
-			<input type="text" id="name" name="vehicle[name]" value="<%=vehicle.name%>">
-		</div>
-		<div>
-			<label for="location">Location</label>
-			<input type="text" id="location" name="vehicle[location]" value="<%=vehicle.location%>">
-		</div>
-		<button>Update Vehicle</button>
-	</form>
+<% layout('layouts/boilerplate') %>
+<h1>Edit Vehicle</h1>
+<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST">
 	<div>
-		<a href="/vehicles/<%= vehicle._id %>">Back To Vehicle</a>
+		<label for="name">Name</label>
+		<input type="text" id="name" name="vehicle[name]" value="<%=vehicle.name%>">
 	</div>
-</body>
-</html>
+	<div>
+		<label for="location">Location</label>
+		<input type="text" id="location" name="vehicle[location]" value="<%=vehicle.location%>">
+	</div>
+	<button>Update Vehicle</button>
+</form>
+<div>
+	<a href="/vehicles/<%= vehicle._id %>">Back To Vehicle</a>
+</div>
