--- a/views/vehicles/index.ejs
+++ b/views/vehicles/index.ejs
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Vehicles</title>
-</head>
-<body>
-	<h1>All Vehicles</h1>
-	<div>
-		<a href="/vehicles/new">Add Vehicle</a>
-	</div>
-	<ul>
-		<% for (let vehicle of vehicles){ %>
-			<li><a href="/vehicles/<%= vehicle._id %>"><%= vehicle.name %></a></li></li>
-		<% } %>
-	</ul>
-</body>
-</html>
+<% layout('layouts/boilerplate') %>
+<h1>All Vehicles</h1>
+<div>
+	<a href="/vehicles/new">Add Vehicle</a>
+</div>
+<ul>
+	<% for (let vehicle of vehicles){ %>
+		<li><a href="/vehicles/<%= vehicle._id %>"><%= vehicle.name %></a></li></li>
+	<% } %>
+</ul>
