--- a/views/vehicles/index.ejs
+++ b/views/vehicles/index.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <h1>All Vehicles</h1>
 <div>
-	<a href="/vehicles/new">Add Vehicle</a>
+	<a class="btn btn-info" href="/vehicles/new">Add Vehicle</a>
 </div>
 <% for (let vehicle of vehicles){ %>
 	<div class="card mb-3">
