--- a/views/vehicles/edit.ejs
+++ b/views/vehicles/edit.ejs
@@ -1,16 +1,37 @@
 <% layout('layouts/boilerplate') %>
-<h1>Edit Vehicle</h1>
-<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST">
-	<div>
-		<label for="name">Name</label>
-		<input type="text" id="name" name="vehicle[name]" value="<%=vehicle.name%>">
+<div class="row">
+	<h1 class="text-center">Edit Vehicle</h1>
+	<div class="col-6 offset-3">
+		<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST">
+			<div class="mb-3">
+				<label class="form-label" for="name">Name</label>
+				<input class="form-control" type="text" id="name" name="vehicle[name]" value="<%=vehicle.name%>">
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="image">Image URL</label>
+				<input class="form-control" type="text" id="image" name="vehicle[image]" value="<%=vehicle.image%>">
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="location">Location</label>
+				<input class="form-control" type="text" id="location" name="vehicle[location]" value="<%=vehicle.location%>">
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="price">Price Per Ride</label>
+				<div class="input-group">
+					<span class="input-group-text" id="price-label">CA$</span>
+					<input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="vehicle[price]" value="<%=vehicle.price%>">
+				</div>
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="description">Description</label>
+				<textarea class="form-control" type="text" id="description" name="vehicle[description]"><%= vehicle.description %></textarea>
+			</div>
+			<div class="mb-3">
+				<button class="btn btn-info">Update Vehicle</button>
+			</div>
+		</form>
+		<div>
+			<a class="btn btn-info" href="/vehicles/<%= vehicle._id %>">Back To Vehicle</a>
+		</div>
 	</div>
-	<div>
-		<label for="location">Location</label>
-		<input type="text" id="location" name="vehicle[location]" value="<%=vehicle.location%>">
-	</div>
-	<button>Update Vehicle</button>
-</form>
-<div>
-	<a href="/vehicles/<%= vehicle._id %>">Back To Vehicle</a>
 </div>
