--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -1,15 +1,37 @@
 <% layout('layouts/boilerplate') %>
-<form action="/vehicles" method="POST">
-	<div>
-		<label for="name">Name</label>
-		<input type="text" id="name" name="vehicle[name]">
+<div class="row">
+	<h1 class="text-center">New Vehicle</h1>
+	<div class="col-6 offset-3">
+		<form action="/vehicles" method="POST">
+			<div class="mb-3">
+				<label class="form-label" for="name">Name</label>
+				<input class="form-control" type="text" id="name" name="vehicle[name]">
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="image">Image URL</label>
+				<input class="form-control" type="text" id="image" name="vehicle[image]">
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="location">Location</label>
+				<input class="form-control" type="text" id="location" name="vehicle[location]">
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="price">Price Per Ride</label>
+				<div class="input-group">
+					<span class="input-group-text" id="price-label">CA$</span>
+					<input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="vehicle[price]">
+				</div>
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="description">Description</label>
+				<textarea class="form-control" type="text" id="description" name="vehicle[description]"></textarea>
+			</div>
+			<div class="mb-3">
+				<button class="btn btn-info">Add Vehicle</button>
+			</div>
+		</form>
+		<div>
+			<a class="btn btn-info" href="/vehicles">All Vehicles</a>
+		</div>
 	</div>
-	<div>
-		<label for="location">Location</label>
-		<input type="text" id="location" name="vehicle[location]">
-	</div>
-	<button>Add Vehicle</button>
-</form>
-<div>
-	<a href="/vehicles">All Vehicles</a>
 </div>
