--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -1,16 +1,25 @@
 <% layout('layouts/boilerplate') %>
-<h1><%= vehicle.name %></h1>
-<h2><%= vehicle.location %></h2>
-<img src="<%= vehicle.image %>" alt="">
-<p><%= vehicle.description %></p>
-<p>
-	<a href="/vehicles/<%=vehicle._id%>/edit">Edit</a>
-</p>
-<p>
-	<form action="/vehicles/<%=vehicle._id%>?_method=DELETE" method="POST">
-		<button>Delete</button>
-	</form>
-</p>
-<div>
-	<a href="/vehicles">All Vehicles</a>
+<div class="row">
+	<div class="col-6 offset-3">
+		<div class="card mb-3">
+			<img src="<%= vehicle.image %>" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title"><%= vehicle.name %></h5>
+				<p class="card-text"><%= vehicle.description %></p>
+			</div>
+			<ul class="list-group list-group-flush">
+				<li class="list-group-item text-muted"><%= vehicle.location %></li>
+				<li class="list-group-item">CA$<%= vehicle.price %>/Ride</li>
+			</ul>
+			<div class="card-body">
+				<a class="card-link btn btn-info" href="/vehicles/<%=vehicle._id%>/edit">Edit</a>
+				<form class="d-inline" action="/vehicles/<%=vehicle._id%>?_method=DELETE" method="POST">
+					<button class="btn btn-info">Delete</button>
+				</form>
+			</div>
+			<div class="card-footer">
+				<a class="btn btn-info" href="/vehicles">All Vehicles</a>
+			</div>
+		</div>
+	</div>
 </div>
