--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -2,29 +2,44 @@
 <div class="row">
 	<h1 class="text-center">New Vehicle</h1>
 	<div class="col-6 offset-3">
-		<form action="/vehicles" method="POST">
+		<form action="/vehicles" method="POST" novalidate class="validateForm">
 			<div class="mb-3">
 				<label class="form-label" for="name">Name</label>
-				<input class="form-control" type="text" id="name" name="vehicle[name]">
+				<input class="form-control" type="text" id="name" name="vehicle[name]" required>
+				<div class="valid-feedback">
+					Sounds good!
+				</div>
 			</div>
 			<div class="mb-3">
 				<label class="form-label" for="image">Image URL</label>
-				<input class="form-control" type="text" id="image" name="vehicle[image]">
+				<input class="form-control" type="text" id="image" name="vehicle[image]" required>
+				<div class="valid-feedback">
+					Looks great!
+				</div>
 			</div>
 			<div class="mb-3">
 				<label class="form-label" for="location">Location</label>
-				<input class="form-control" type="text" id="location" name="vehicle[location]">
+				<input class="form-control" type="text" id="location" name="vehicle[location]" required>
+				<div class="valid-feedback">
+					Nice area!
+				</div>
 			</div>
 			<div class="mb-3">
 				<label class="form-label" for="price">Price Per Ride</label>
 				<div class="input-group">
 					<span class="input-group-text" id="price-label">CA$</span>
-					<input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="vehicle[price]">
+					<input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="vehicle[price]" required>
+					<div class="valid-feedback">
+						Sweet deal!
+					</div>
 				</div>
 			</div>
 			<div class="mb-3">
 				<label class="form-label" for="description">Description</label>
-				<textarea class="form-control" type="text" id="description" name="vehicle[description]"></textarea>
+				<textarea class="form-control" type="text" id="description" name="vehicle[description]" required></textarea>
+				<div class="valid-feedback">
+					Wicked summary!
+				</div>
 			</div>
 			<div class="mb-3">
 				<button class="btn btn-info">Add Vehicle</button>
