--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-	<div class="col-6 offset-3">
+	<div class="col-6">
 		<div class="card mb-3">
 			<img src="<%= vehicle.image %>" class="card-img-top" alt="...">
 			<div class="card-body">
@@ -21,5 +21,33 @@
 				<a class="btn btn-info" href="/vehicles">All Vehicles</a>
 			</div>
 		</div>
+	</div>
+	<div class="col-6">
+		<h2>Leave Your Review</h2>
+		<form action="/vehicles/<%=vehicle._id%>/reviews" method="POST" class="mb-3 validateForm" novalidate>
+			<div class="mb-3">
+				<label class="form-label" for="rating">Rating</label>
+				<input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="body">Review</label>
+				<textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+				<div class="valid-feedback">
+					Thank you!
+				</div>
+			</div>
+			<button class="btn btn-info">Submit</button>
+		</form>
+		<% for(let review of vehicle.reviews) { %>
+		<div class="card mb-3">
+			<div class="card-body">
+				<h5 class="card-title">Rating: <%= review.rating %></h5>
+				<p class="card-text">Review: <%= review.body %></p>
+				<form action="/vehicles/<%=vehicle._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+					<button class="btn btn-sm btn-info">Delete</button>
+				</form>
+			</div>
+		</div>
+		<% } %>
 	</div>
 </div>
