--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,25 +9,11 @@
 <body class="d-flex flex-column vh-100">
 	<%- include('../partials/navbar') %>
 	<main class="container mt-5">
+		<%- include('../partials/flash') %>
 		<%- body %>
 	</main>
 	<%- include('../partials/footer') %>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-	<script type="text/javascript">
-	(function () {
-		'use strict'
-		const forms = document.querySelectorAll('.validateForm')
-		Array.from(forms)
-		.forEach(function (form) {
-			form.addEventListener('submit', function (event) {
-				if (!form.checkValidity()) {
-					event.preventDefault()
-					event.stopPropagation()
-				}
-				form.classList.add('was-validated')
-			}, false)
-		})
-	})()
-	</script>
+	<script src='/scripts/validateForms.js'></script>
 </body>
 </html>
