--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,6 +10,14 @@
 				<a class="nav-link" href="/vehicles">Vehicles</a>
 				<a class="nav-link" href="/vehicles/new">New Vehicle</a>
 			</div>
+			<div class="navbar-nav ms-auto">
+				<% if(!currentUser) { %>
+				<a class="nav-link" href="/login">Login</a>
+				<a class="nav-link" href="/register">Register</a>
+				<% } else { %>
+				<a class="nav-link" href="/logout">Logout</a>
+				<% } %>
+			</div>
 		</div>
 	</div>
 </nav>
