--- a/views/vehicles/edit.ejs
+++ b/views/vehicles/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
 	<h1 class="text-center">Edit Vehicle</h1>
 	<div class="col-6 offset-3">
-		<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST" novalidate class="validateForm">
+		<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST" novalidate class="validateForm" enctype="multipart/form-data">
 			<div class="mb-3">
 				<label class="form-label" for="name">Name</label>
 				<input class="form-control" type="text" id="name" name="vehicle[name]" value="<%=vehicle.name%>" required>
@@ -11,11 +11,8 @@
 				</div>
 			</div>
 			<div class="mb-3">
-				<label class="form-label" for="image">Image URL</label>
-				<input class="form-control" type="text" id="image" name="vehicle[image]" value="<%=vehicle.image%>" required>
-				<div class="valid-feedback">
-					Looks great!
-				</div>
+				<label for="image" class="form-label">Add image(s)...</label>
+				<input class="form-control" type="file" id="image" multiple name="image">
 			</div>
 			<div class="mb-3">
 				<label class="form-label" for="location">Location</label>
@@ -40,6 +37,15 @@
 				<div class="valid-feedback">
 					Wicked summary!
 				</div>
+			</div>
+			<div class="mb-3">
+				<% vehicle.images.forEach(function(img, i) { %>
+				<img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+				<div class="form-check-inline">
+					<input type="checkbox" id="image-<%= i %>" name="destroyImg[]" value="<%= img.filename %>">
+				</div>
+				<label for="image-<%= i %>">Delete</label>
+				<% }) %>
 			</div>
 			<div class="mb-3">
 				<button class="btn btn-info">Update Vehicle</button>
