--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
 	<h1 class="text-center">New Vehicle</h1>
 	<div class="col-6 offset-3">
-		<form action="/vehicles" method="POST" novalidate class="validateForm">
+		<form action="/vehicles" method="POST" novalidate class="validateForm" enctype="multipart/form-data">
 			<div class="mb-3">
 				<label class="form-label" for="name">Name</label>
 				<input class="form-control" type="text" id="name" name="vehicle[name]" required>
@@ -11,8 +11,8 @@
 				</div>
 			</div>
 			<div class="mb-3">
-				<label class="form-label" for="image">Image URL</label>
-				<input class="form-control" type="text" id="image" name="vehicle[image]" required>
+				<label for="image" class="form-label">Choose image(s)...</label>
+				<input class="form-control" type="file" id="image" multiple name="image" required>
 				<div class="valid-feedback">
 					Looks great!
 				</div>
