--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -1,8 +1,27 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/styles/stars.css">
 <div class="row">
 	<div class="col-6">
+		<div id="vehicleCarousel" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-inner">
+				<% vehicle.images.forEach((img, i) => { %>
+					<div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+						<img src="<%= img.url %>" class="d-block w-100" alt="">
+					</div>
+				<% }) %>
+			</div>
+			<% if(vehicle.images.length > 1) { %>
+				<a class="carousel-control-prev" href="#vehicleCarousel" role="button" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#vehicleCarousel" role="button" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</a>
+			<% } %>
+		</div>
 		<div class="card mb-3">
-			<img src="<%= vehicle.image %>" class="card-img-top" alt="...">
 			<div class="card-body">
 				<h5 class="card-title"><%= vehicle.name %></h5>
 				<p class="card-text"><i><%= vehicle.motorist.username %> posted this vehicle</i></p>
@@ -14,8 +33,8 @@
 			</ul>
 			<% if (currentUser && vehicle.motorist.equals(currentUser._id)) { %>
 			<div class="card-body">
-				<a class="card-link btn btn-info" href="/vehicles/<%=vehicle._id%>/edit">Edit</a>
-				<form class="d-inline" action="/vehicles/<%=vehicle._id%>?_method=DELETE" method="POST">
+				<a class="card-link btn btn-info" href="/vehicles/<%= vehicle._id %>/edit">Edit</a>
+				<form class="d-inline" action="/vehicles/<%= vehicle._id %>?_method=DELETE" method="POST">
 					<button class="btn btn-info">Delete</button>
 				</form>
 			</div>
@@ -28,10 +47,21 @@
 	<div class="col-6">
 		<% if (currentUser) { %>
 		<h2>Leave Your Review</h2>
-		<form action="/vehicles/<%=vehicle._id%>/reviews" method="POST" class="mb-3 validateForm" novalidate>
+		<form action="/vehicles/<%= vehicle._id %>/reviews" method="POST" class="mb-3 validateForm" novalidate>
 			<div class="mb-3">
-				<label class="form-label" for="rating">Rating</label>
-				<input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+				<fieldset class="starability-growRotate">
+					<input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+					<input type="radio" id="first-rate1" name="review[rating]" value="1" />
+					<label for="first-rate1" title="Terrible">1 star</label>
+					<input type="radio" id="first-rate2" name="review[rating]" value="2" />
+					<label for="first-rate2" title="Not good">2 stars</label>
+					<input type="radio" id="first-rate3" name="review[rating]" value="3" />
+					<label for="first-rate3" title="Average">3 stars</label>
+					<input type="radio" id="first-rate4" name="review[rating]" value="4" />
+					<label for="first-rate4" title="Very good">4 stars</label>
+					<input type="radio" id="first-rate5" name="review[rating]" value="5" />
+					<label for="first-rate5" title="Amazing">5 stars</label>
+				</fieldset>
 			</div>
 			<div class="mb-3">
 				<label class="form-label" for="body">Review</label>
@@ -46,10 +76,13 @@
 		<% for(let review of vehicle.reviews) { %>
 		<div class="card mb-3">
 			<div class="card-body">
-				<h5 class="card-title">Rating: <%= review.rating %></h5>
-				<p class="card-text"><%= review.motorist.username %> said "<%= review.body %>"</p>
+				<h5 class="card-title"><%= review.motorist.username %></h5>
+				<p class="starability-result" data-rating="<%= review.rating %>">
+					Rated <%= review.rating %> stars
+				</p>
+				<p class="card-text">"<%= review.body %>"</p>
 				<% if (currentUser && review.motorist.equals(currentUser._id)) { %>
-				<form action="/vehicles/<%=vehicle._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+				<form action="/vehicles/<%= vehicle._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
 					<button class="btn btn-sm btn-info">Delete</button>
 				</form>
 				<% } %>
