--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -2,23 +2,24 @@
 <link rel="stylesheet" href="/styles/stars.css">
 <div class="row">
 	<div class="col-6">
+		<div id='map' style='width: 400px; height: 300px;'></div>
 		<div id="vehicleCarousel" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<% vehicle.images.forEach((img, i) => { %>
-					<div class="carousel-item <%= i === 0 ? 'active' : '' %>">
-						<img src="<%= img.url %>" class="d-block w-100" alt="">
-					</div>
+				<div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+					<img src="<%= img.url %>" class="d-block w-100" alt="">
+				</div>
 				<% }) %>
 			</div>
 			<% if(vehicle.images.length > 1) { %>
-				<a class="carousel-control-prev" href="#vehicleCarousel" role="button" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#vehicleCarousel" role="button" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</a>
+			<a class="carousel-control-prev" href="#vehicleCarousel" role="button" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#vehicleCarousel" role="button" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</a>
 			<% } %>
 		</div>
 		<div class="card mb-3">
@@ -91,3 +92,8 @@
 		<% } %>
 	</div>
 </div>
+<script>
+	const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+	const vehicle = <%- JSON.stringify(vehicle) %>
+</script>
+<script src="/scripts/showPageMap.js"></script>
