--- a/views/vehicles/index.ejs
+++ b/views/vehicles/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<div id="map" style="width: 100%; height: 500px;"></div>
 <h1>All Vehicles</h1>
 <div>
 	<a class="btn btn-info" href="/vehicles/new">Add Vehicle</a>
@@ -26,3 +27,8 @@
 		</div>
 	</div>
 <% } %>
+<script>
+	const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+	const vehicles = { features: <%- JSON.stringify(vehicles) %> };
+</script>
+<script src="/scripts/clusterMap.js"></script>
