--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -94,6 +94,6 @@
 </div>
 <script>
 	const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
-	const vehicle = <%- JSON.stringify(vehicle) %>
+	const vehicle = <%- JSON.stringify(vehicle) %>;
 </script>
 <script src="/scripts/showPageMap.js"></script>
