--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,26 +1,45 @@
 <% layout('layouts/boilerplate') %>
-<h1>Member Registration</h1>
-<form action="/register" method="POST" class="validateForm" novalidate>
-	<div class="mb-3">
-		<label class="form-label" for="username">Username</label>
-		<input class="form-control" type="text" id="username" name="username" required>
-		<div class="valid-feedback">
-			Sounds good!
+<div class="container justify-content-center align-items-center mt-5">
+	<div class="row">
+		<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+			<div class="card mb-3 nightBG">
+				<div class="card m-3 neonBG">
+					<div class="card-body">
+						<h5 class="card-title text-center mdText contentFont">Member Registration</h5>
+						<form action="/register" method="POST" class="validateForm" novalidate>
+							<div class="mb-3">
+								<label class="form-label smText contentFont" for="username">Username</label>
+								<input class="form-control" type="text" id="username" name="username" placeholder="Username" autofocus required>
+								<div class="valid-feedback xsText contentFont">
+									Sounds good!
+								</div>
+							</div>
+							<div class="mb-3">
+								<label class="form-label smText contentFont" for="email">Email</label>
+								<input class="form-control" type="email" id="email" name="email" placeholder="Email Address" required>
+								<div class="valid-feedback xsText contentFont">
+									Perfect!
+								</div>
+							</div>
+							<div class="mb-3">
+								<label class="form-label smText contentFont" for="password">Password</label>
+								<input class="form-control" type="password" id="password" name="password" placeholder="Password" required>
+								<div class="valid-feedback xsText contentFont">
+									Excellent!
+								</div>
+							</div>
+							<div class="mb-3">
+								<label class="form-label smText contentFont" for="memberCode">Member Code</label>
+								<input class="form-control" type="text" id="memberCode" name="memberCode" placeholder="Member Code" required>
+								<div class="valid-feedback xsText contentFont">
+									Thank you for evaluating Swingcars!
+								</div>
+							</div>
+							<button class="neonBtn mdBtn w-100">Register</button>
+						</form>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="mb-3">
-		<label class="form-label" for="email">Email</label>
-		<input class="form-control" type="email" id="email" name="email" required>
-		<div class="valid-feedback">
-			Perfect!
-		</div>
-	</div>
-	<div class="mb-3">
-		<label class="form-label" for="password">Password</label>
-		<input class="form-control" type="password" id="password" name="password" required>
-		<div class="valid-feedback">
-			Excellent!
-		</div>
-	</div>
-	<button class="btn btn-info">Register</button>
-</form>
+</div>
