--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,71 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Swingcars Home</title>
+	<title>Welcome to Swingcars!</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Caveat+Brush&family=Lacquer&family=Lobster&family=Lobster+Two:ital@1&family=Metal+Mania&family=Righteous&family=Sedgwick+Ave+Display&family=UnifrakturMaguntia&family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/styles/nav.css">
+	<link rel="stylesheet" href="/styles/btn.css">
+	<link rel="stylesheet" href="/styles/home.css">
 </head>
-<body>
-	<h1>Swingcars Homepage</h1>
+<body class="d-flex text-center vh-100 text-white bg-dark">
+	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+		<header class="mb-auto navText">
+			<div>
+				<h3 id="navBrand" class="float-md-start mb-0 neonBtn">Swingcars.net</h3>
+				<nav class="nav nav-masthead justify-content-center float-md-end">
+					<a class="neonBtn me-3" href="/vehicles">Showroom</a>
+					<% if(!currentUser) { %>
+					<a class="neonBtn me-3" href="/login">Login</a>
+					<a class="neonBtn me-3" href="/register">Register</a>
+					<% } else { %>
+					<a class="neonBtn" href="/logout">Logout</a>
+					<% } %>
+				</nav>
+			</div>
+		</header>
+		<main class="px-3">
+			<h1 class="lgText neonBtn">Swingcars</h1>
+			<p class="lead smText contentFont">Welcome to Swingcars!<br>Experience life through someone else's vehicle.<br>* Members must possess a valid driver's licence.*</p>
+			<a href="/vehicles" class="neonBtn enterBtn">Come Inside</a>
+		</main>
+		<footer class="mt-auto">
+			<span class="me-3">&copy; <span class="xsText contentFont">2020 Superklok Labs</span></span>
+			<div class="btn-group dropup">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+					<span id="tmLogo">TM</span>
+				</button>
+				<ul class="dropdown-menu nightBG">
+					<li id="tmDotLink" class="my-0 py-0">
+						<a class="neonBtn mx-4" href="https://www.trevmorin.com/"><span class="tmLgText">T</span><span class="tmSmText">rev</span><span class="tmLgText">M</span><span class="tmSmText">orin</span><span class="tmComText">.com</span></a>
+					</li>
+					<li class="mt-0 mb-1 pt-0 pb-1">
+						<a class="neonBtn mx-4" href="https://www.superklok.com/"><span id="slText">Superklok.com</span></a>
+					</li>
+					<li class="mt-0 mb-1 pt-0 pb-1">
+						<a class="neonBtn mx-4" href="https://www.currentcourant.com/"><span id="ccText">CurrentCourant.com</span></a>
+					</li>
+					<li class="mb-2 pb-1">
+						<a class="neonBtn mx-4" href="https://www.jetwheelreel.com/"><span id="jwrText">JetWheelReel.com</span></a>
+					</li>
+					<li class="mt-0 mb-3">
+						<a class="neonBtn mx-4" href="https://www.sliderpiler.com/"><span id="spText">SliderPiler.com</span></a>
+					</li>
+				</ul>
+			</div>
+			<div class="btn-group dropup ms-2">
+				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+					<span class="smText contentFont">English</span>
+				</button>
+				<ul class="dropdown-menu nightBG">
+					<li class="mx-4 my-3 px-3">
+						<a class="smText neonBtn" href="https://www.swingcars.ca/">Fran&#231;ais</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
