--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,11 +1,11 @@
 <% if(success && success.length) { %>
-<div class="alert alert-info alert-dismissible fade show" role="alert">
+<div class="alert alert-info alert-dismissible fade show noTextShadow" role="alert">
 	<%= success %>
 	<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 <% } %>
 <% if(error && error.length) { %>
-<div class="alert alert-info alert-dismissible fade show" role="alert">
+<div class="alert alert-info alert-dismissible fade show noTextShadow" role="alert">
 	<%= error %>
 	<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
