--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,37 @@
-<footer class="footer bg-dark py-3 mt-auto">
+<footer class="footer nightBG py-3 mt-auto">
 	<div class="container">
-		<span class="text-muted">&copy; 2020 Superklok Labs</span>
+		<span class="me-3">&copy; <span class="xsText contentFont">2020 Superklok Labs</span></span>
+		<div class="btn-group dropup">
+			<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<span id="tmLogo">TM</span>
+			</button>
+			<ul class="dropdown-menu nightBG">
+				<li id="tmDotLink" class="my-0 py-0">
+					<a class="neonBtn mx-4" href="https://www.trevmorin.com/"><span class="tmLgText">T</span><span class="tmSmText">rev</span><span class="tmLgText">M</span><span class="tmSmText">orin</span><span class="tmComText">.com</span></a>
+				</li>
+				<li class="mt-0 mb-1 pt-0 pb-1">
+					<a class="neonBtn mx-4" href="https://www.superklok.com/"><span id="slText">Superklok.com</span></a>
+				</li>
+				<li class="mt-0 mb-1 pt-0 pb-1">
+					<a class="neonBtn mx-4" href="https://www.currentcourant.com/"><span id="ccText">CurrentCourant.com</span></a>
+				</li>
+				<li class="mb-2 pb-1">
+					<a class="neonBtn mx-4" href="https://www.jetwheelreel.com/"><span id="jwrText">JetWheelReel.com</span></a>
+				</li>
+				<li class="mt-0 mb-3">
+					<a class="neonBtn mx-4" href="https://www.sliderpiler.com/"><span id="spText">SliderPiler.com</span></a>
+				</li>
+			</ul>
+		</div>
+		<div class="btn-group dropup ms-2">
+			<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
+				<span class="smText contentFont">English</span>
+			</button>
+			<ul class="dropdown-menu nightBG">
+				<li class="mx-4 my-3 px-3">
+					<a class="smText neonBtn" href="https://www.swingcars.ca/">Fran&#231;ais</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </footer>
