--- a/views/vehicles/index.ejs
+++ b/views/vehicles/index.ejs
@@ -1,31 +1,29 @@
 <% layout('layouts/boilerplate') %>
-<div id="map" style="width: 100%; height: 500px;"></div>
-<h1>All Vehicles</h1>
-<div>
-	<a class="btn btn-info" href="/vehicles/new">Add Vehicle</a>
-</div>
+<div id="clusterMap" class="mb-3 noTextShadow rounded"></div>
 <% for (let vehicle of vehicles){ %>
-	<div class="card mb-3">
+<div class="card mb-3 nightBG">
+	<div class="card m-3 neonBG">
 		<div class="row">
 			<div class="col-md-4">
 				<% if (vehicle.images.length) { %>
-					<img class="img-fluid" alt="" src="<%= vehicle.images[0].url %>">
+				<img class="img-fluid" alt="" src="<%= vehicle.images[0].url %>">
 				<% } else { %>
-					<img class="img-fluid" alt="" src="">
+				<img class="img-fluid" alt="" src="">
 				<% } %>
 			</div>
 			<div class="col-md-8">
 				<div class="card-body">
-					<h5 class="card-title"><%= vehicle.name %></h5>
-					<p class="card-text"><%= vehicle.description %></p>
+					<h5 class="card-title mdText contentFont"><%= vehicle.name %></h5>
+					<p class="card-text smText contentFont"><%= vehicle.description.substring(0, 200) %>...</p>
 					<p class="card-text">
-						<small class="text-muted"><%= vehicle.location %></small>		
+						<span class="smText contentFont"><%= vehicle.location %></span>		
 					</p>
-					<a class="btn btn-info" href="/vehicles/<%= vehicle._id %>">View <%= vehicle.name %></a>
+					<a class="neonBtn mdBtn" href="/vehicles/<%= vehicle._id %>">View <%= vehicle.name %></a>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 <% } %>
 <script>
 	const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
