--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -1,52 +1,58 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-	<h1 class="text-center">New Vehicle</h1>
-	<div class="col-6 offset-3">
-		<form action="/vehicles" method="POST" novalidate class="validateForm" enctype="multipart/form-data">
-			<div class="mb-3">
-				<label class="form-label" for="name">Name</label>
-				<input class="form-control" type="text" id="name" name="vehicle[name]" required>
-				<div class="valid-feedback">
-					Sounds good!
-				</div>
-			</div>
-			<div class="mb-3">
-				<label for="image" class="form-label">Choose image(s)...</label>
-				<input class="form-control" type="file" id="image" multiple name="image" required>
-				<div class="valid-feedback">
-					Looks great!
-				</div>
-			</div>
-			<div class="mb-3">
-				<label class="form-label" for="location">Location</label>
-				<input class="form-control" type="text" id="location" name="vehicle[location]" required>
-				<div class="valid-feedback">
-					Nice area!
-				</div>
-			</div>
-			<div class="mb-3">
-				<label class="form-label" for="price">Price Per Ride</label>
-				<div class="input-group">
-					<span class="input-group-text" id="price-label">CA$</span>
-					<input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="vehicle[price]" required>
-					<div class="valid-feedback">
-						Sweet deal!
+	<div class="card mb-3 nightBG">
+		<div class="card m-3 neonBG">
+			<div class="card-body">
+				<h1 class="text-center mdText contentFont">New Vehicle</h1>
+				<div class="col-lg-6 offset-lg-3 col-xl-8 offset-xl-2">
+					<form action="/vehicles" method="POST" novalidate class="validateForm" enctype="multipart/form-data">
+						<div class="mb-3">
+							<label class="form-label smText contentFont" for="name">Name</label>
+							<input class="form-control" type="text" id="name" name="vehicle[name]" autofocus required>
+							<div class="valid-feedback xsText contentFont">
+								Sounds good!
+							</div>
+						</div>
+						<div class="mb-3">
+							<label for="image" class="form-label smText contentFont">Choose image(s)...</label>
+							<input class="form-control" type="file" id="image" multiple name="image" required>
+							<div class="valid-feedback xsText contentFont">
+								Looks great!
+							</div>
+						</div>
+						<div class="mb-3">
+							<label class="form-label smText contentFont" for="location">Location</label>
+							<input class="form-control" type="text" id="location" name="vehicle[location]" required>
+							<div class="valid-feedback xsText contentFont">
+								Nice area!
+							</div>
+						</div>
+						<div class="mb-3">
+							<label class="form-label smText contentFont" for="price">Price Per Ride</label>
+							<div class="input-group">
+								<span class="input-group-text noTextShadow" id="price-label">CA$</span>
+								<input type="text" class="form-control" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="vehicle[price]" required>
+								<div class="valid-feedback xsText contentFont">
+									Sweet deal!
+								</div>
+							</div>
+						</div>
+						<div class="mb-3">
+							<label class="form-label smText contentFont" for="description">Description</label>
+							<textarea class="form-control" type="text" id="description" name="vehicle[description]" required></textarea>
+							<div class="valid-feedback xsText contentFont">
+								Wicked summary!
+							</div>
+						</div>
+						<div class="mb-3">
+							<button class="neonBtn mdBtn">Add Vehicle</button>
+						</div>
+					</form>
+					<div>
+						<a class="neonBtn mdBtn" href="/vehicles">All Vehicles</a>
 					</div>
 				</div>
 			</div>
-			<div class="mb-3">
-				<label class="form-label" for="description">Description</label>
-				<textarea class="form-control" type="text" id="description" name="vehicle[description]" required></textarea>
-				<div class="valid-feedback">
-					Wicked summary!
-				</div>
-			</div>
-			<div class="mb-3">
-				<button class="btn btn-info">Add Vehicle</button>
-			</div>
-		</form>
-		<div>
-			<a class="btn btn-info" href="/vehicles">All Vehicles</a>
 		</div>
 	</div>
 </div>
