--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,11 +9,12 @@
 	<link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Caveat+Brush&family=Lacquer&family=Lobster&family=Lobster+Two:ital@1&family=Metal+Mania&family=Righteous&family=Sedgwick+Ave+Display&family=UnifrakturMaguntia&family=VT323&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/styles/stars.css">
 	<link rel="stylesheet" href="/styles/nav.css">
 	<link rel="stylesheet" href="/styles/btn.css">
 	<link rel="stylesheet" href="/styles/app.css">
 </head>
-<body class="d-flex flex-column vh-100 text-white bg-dark">
+<body class="d-flex flex-column vh-100 bg-dark">
 	<%- include('../partials/navbar') %>
 	<main class="container mt-3">
 		<%- include('../partials/flash') %>
