--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer nightBG py-3 mt-auto">
 	<div class="container">
-		<span class="me-3">&copy; <span class="xsText contentFont">2020 Superklok Labs</span></span>
+		<span class="me-3"><span class="defFont">&copy;</span> <span class="xsText contentFont">2021 Superklok Labs</span></span>
 		<div class="btn-group dropup">
 			<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
 				<span id="tmLogo">TM</span>
