--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -8,7 +8,7 @@
 					<form action="/vehicles" method="POST" novalidate class="validateForm" enctype="multipart/form-data">
 						<div class="mb-3">
 							<label class="form-label smText contentFont" for="name">Name</label>
-							<input class="form-control" type="text" id="name" name="vehicle[name]" autofocus required>
+							<input class="form-control" type="text" id="name" name="vehicle[name]" placeholder="Name" autofocus required>
 							<div class="valid-feedback xsText contentFont">
 								Sounds good!
 							</div>
@@ -22,7 +22,7 @@
 						</div>
 						<div class="mb-3">
 							<label class="form-label smText contentFont" for="location">Location</label>
-							<input class="form-control" type="text" id="location" name="vehicle[location]" required>
+							<input class="form-control" type="text" id="location" name="vehicle[location]" placeholder="Location" required>
 							<div class="valid-feedback xsText contentFont">
 								Nice area!
 							</div>
