--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,31 +9,31 @@
 	<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Caveat+Brush&family=Lacquer&family=Lobster&family=Lobster+Two:ital@1&family=Metal+Mania&family=Righteous&family=Sedgwick+Ave+Display&family=UnifrakturMaguntia&family=VT323&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/styles/nav.css">
 	<link rel="stylesheet" href="/styles/btn.css">
+	<link rel="stylesheet" href="/styles/app.css">
 	<link rel="stylesheet" href="/styles/home.css">
 </head>
 <body class="d-flex text-center vh-100 text-white bg-dark">
 	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 		<header class="mb-auto navText">
-			<div>
-				<h3 id="navBrand" class="float-md-start mb-0 neonBtn">Swingcars.net</h3>
-				<nav class="nav nav-masthead justify-content-center float-md-end">
-					<a class="neonBtn me-3" href="/vehicles">Showroom</a>
+			<div class="d-none d-md-block">
+				<h3 class="navbar-brand float-start mb-0 neonBtn">Swingcars.net</h3>
+				<nav class="nav nav-masthead justify-content-center float-end">
 					<% if(!currentUser) { %>
-					<a class="neonBtn me-3" href="/login">Login</a>
-					<a class="neonBtn me-3" href="/register">Register</a>
+					<a class="neonBtn me-4 mt-1" href="/login">Login</a>
+					<a class="neonBtn me-4 mt-1" href="/register">Register</a>
 					<% } else { %>
-					<a class="neonBtn" href="/logout">Logout</a>
+					<a class="neonBtn me-4 mt-1" href="/logout">Logout</a>
 					<% } %>
 				</nav>
 			</div>
 		</header>
 		<main class="px-3">
-			<h1 class="lgText neonBtn">Swingcars</h1>
+			<h1 class="lgText neonBtn mb-3">Swingcars</h1>
 			<p class="lead smText contentFont">Welcome to Swingcars!<br>Experience life through someone else's vehicle.<br>* Members must possess a valid driver's licence.*</p>
 			<a href="/vehicles" class="neonBtn enterBtn">Come Inside</a>
 		</main>
 		<footer class="mt-auto">
-			<span class="me-3">&copy; <span class="xsText contentFont">2020 Superklok Labs</span></span>
+			<span class="me-3">&copy; <span class="xsText contentFont">2021 Superklok Labs</span></span>
 			<div class="btn-group dropup">
 				<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false">
 					<span id="tmLogo">TM</span>
