--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -1,8 +1,7 @@
 <% layout('layouts/boilerplate') %>
-<link rel="stylesheet" href="/styles/stars.css">
 <div class="row">
 	<div class="col-lg-6">
-		<div id="vehicleCarousel" class="carousel slide mb-3" data-bs-ride="carousel">
+		<div id="vehicleCarousel" class="carousel slide mb-3" data-bs-ride="carousel" data-bs-interval="false">
 			<div class="carousel-inner">
 				<% vehicle.images.forEach((img, i) => { %>
 				<div class="carousel-item <%= i === 0 ? 'active' : '' %>">
@@ -28,7 +27,7 @@
 					<p class="card-text smText contentFont"><span class="neonBtn mdBtn"><%= vehicle.motorist.username %></span> posted this vehicle</p>
 					<p class="card-text smText contentFont"><%= vehicle.description %></p>
 					<p class="card-text smText contentFont"><%= vehicle.location %></p>
-					<p class="smText">CA$<span class="contentFont"><%= vehicle.price %>/Ride</span></p>
+					<p class="smText"><span class="defFont">CA$</span><span class="contentFont"><%= vehicle.price %>/Ride</span></p>
 				</div>
 				<% if (currentUser && vehicle.motorist.equals(currentUser._id)) { %>
 				<div class="card-body">
