--- a/v0.x.x/views/partials/footer.ejs
+++ b/v0.x.x/views/partials/footer.ejs
@@ -53,10 +53,10 @@
 					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258155/SocialMediaIcons/iconSC_i0oi4x.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://audiomack.com/superklok/uploads">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257825/SocialMediaIcons/iconAM_wvzqeg.png" alt="">
+					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257825/SocialMediaIcons/iconAM_wvzqeg.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://superklok.bandcamp.com/">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257800/SocialMediaIcons/iconBC_umi8zt.png" alt="">
+					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257800/SocialMediaIcons/iconBC_umi8zt.png" alt="">
 				</a>
 			</div>
 		</div>
@@ -82,10 +82,10 @@
 					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635258155/SocialMediaIcons/iconSC_i0oi4x.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://audiomack.com/superklok/uploads">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257825/SocialMediaIcons/iconAM_wvzqeg.png" alt="">
+					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257825/SocialMediaIcons/iconAM_wvzqeg.png" alt="">
 				</a>
 				<a class="socialBtn" href="https://superklok.bandcamp.com/">
-					<img src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257800/SocialMediaIcons/iconBC_umi8zt.png" alt="">
+					<img class="rounded" src="https://res.cloudinary.com/superkloklabs/image/upload/v1635257800/SocialMediaIcons/iconBC_umi8zt.png" alt="">
 				</a>
 			</div>
 		</div>
