--- a/v0.x.x/views/home.ejs
+++ b/v0.x.x/views/home.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate') %>
-<div class="p-3 mx-auto mt-5 mb-auto">
-	<h1 class="neonBtn lgText">Under Construction!</h1>
+<div class="p-1 pt-sm-3 px-sm-3 mx-auto mt-3 mt-sm-4 mt-md-5 mb-auto pb-5">
+	<h1 class="neonBtn lgText d-none d-sm-block">Under Construction!</h1>
+	<h1 class="neonBtn lgMobileText d-block d-sm-none">Under Construction!</h1>
 	<h5 class="contentFont smText">Your interest in <span class="mdText neonBtn">Swingcars</span> is much appreciated. Please check back later and feel free to send an email to <a class="mdBtn neonBtn" href="mailto:trev@superklok.com">trev@superklok.com</a> if you have any questions about this project.</h5>
 </div>
