--- a/v0.x.x/views/layouts/boilerplate.ejs
+++ b/v0.x.x/views/layouts/boilerplate.ejs
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="/styles/app.css">
 	<link rel="stylesheet" href="/styles/home.css">
 </head>
-<body class="d-flex text-center vh-100 flex-column text-white bg-dark">
-	<main class="container mt-3">
+<body class="d-flex text-center vh-100 flex-column text-white">
+	<main class="container mt-1 mt-md-3 mt-lg-5">
 	<%- body %>
 	</main>
 	<%- include('../partials/footer') %>
