--- a/v1.x.x/views/home.ejs
+++ b/v1.x.x/views/home.ejs
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="/styles/app.css">
 	<link rel="stylesheet" href="/styles/home.css">
 </head>
-<body class="d-flex text-center vh-100 text-white bg-dark">
-	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<body class="d-flex text-center vh-100 text-white">
+	<div class="cover-container d-flex w-100 h-100 py-3 px-0 px-md-3 mx-auto flex-column">
 		<header class="mb-auto navText">
 			<div class="d-none d-md-block">
 				<h3 class="navbar-brand float-start mb-0 neonBtn">Swingcars.net</h3>
@@ -28,7 +28,7 @@
 				</nav>
 			</div>
 		</header>
-		<main class="px-3">
+		<main class="pb-5">
 			<h1 class="lgText neonBtn mb-3">Swingcars</h1>
 			<p class="lead smText contentFont">Welcome to Swingcars!<br>Experience life through someone else's vehicle.<br>* Members must possess a valid driver's licence.*</p>
 			<a href="/vehicles" class="neonBtn enterBtn">Come Inside</a>
@@ -37,7 +37,7 @@
 			<div class="container d-none d-lg-block">
 				<div class="d-flex align-items-center">
 					<a class="neonBtn" href="http://superkloklabs.com/">
-						<span class="me-3">&copy; <span class="xsText contentFont">2021 Superklok Labs</span></span>
+						<span class="me-3"><span class="copyright">&copy;</span> <span class="xsText contentFont">2021 Superklok Labs</span></span>
 					</a>
 					<div class="btn-group dropup">
 						<button type="button" class="dropdown-toggle neonBtn" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,-1">
@@ -147,7 +147,7 @@
 				</div>
 				<div class="d-flex align-items-center">
 					<a class="neonBtn" href="http://superkloklabs.com/">
-						<span class="me-3">&copy; <span class="xsText contentFont">2021 Superklok Labs</span></span>
+						<span class="me-3"><span class="copyright">&copy;</span> <span class="xsText contentFont">2021 Superklok Labs</span></span>
 					</a>
 					<div class="ms-auto pb-1">
 						<a class="hpSocialBtn" href="https://soundcloud.com/user-166803901">
@@ -199,7 +199,7 @@
 				</div>
 				<div class="d-flex align-items-center justify-content-center pb-2">
 					<a class="neonBtn" href="http://superkloklabs.com/">
-						<span class="me-3">&copy; <span class="xsText contentFont">2021 Superklok Labs</span></span>
+						<span class="me-3"><span class="copyright">&copy;</span> <span class="xsText contentFont">2021 Superklok Labs</span></span>
 					</a>
 				</div>
 				<div class="d-flex align-items-center justify-content-center pt-2">
