Fix iOS Display

--- a/v1.x.x/views/home.ejs
+++ b/v1.x.x/views/home.ejs
@@ -12,6 +12,10 @@
 	<link rel="stylesheet" href="/styles/btn.css">
 	<link rel="stylesheet" href="/styles/app.css">
 	<link rel="stylesheet" href="/styles/home.css">
+	<link rel="stylesheet" href="/styles/navDarkMode.css">
+	<link rel="stylesheet" href="/styles/btnDarkMode.css">
+	<link rel="stylesheet" href="/styles/appDarkMode.css">
+	<link rel="stylesheet" href="/styles/homeDarkMode.css">
 </head>
 <body class="d-flex text-center vh-100 text-white">
 	<div class="cover-container d-flex w-100 h-100 py-3 px-0 px-md-3 mx-auto flex-column">
