--- a/v1.x.x/views/layouts/boilerplate.ejs
+++ b/v1.x.x/views/layouts/boilerplate.ejs
@@ -14,6 +14,10 @@
 	<link rel="stylesheet" href="/styles/nav.css">
 	<link rel="stylesheet" href="/styles/btn.css">
 	<link rel="stylesheet" href="/styles/app.css">
+	<link rel="stylesheet" href="/styles/starsDarkMode.css">
+	<link rel="stylesheet" href="/styles/navDarkMode.css">
+	<link rel="stylesheet" href="/styles/btnDarkMode.css">
+	<link rel="stylesheet" href="/styles/appDarkMode.css">
 </head>
 <body class="d-flex flex-column vh-100">
 	<%- include('../partials/navbar') %>
